# jet-aot-compiler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  mac-syscalls.txt  mach-syscalls.sh  test.txt  test_hello_direct.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assembly/: hello_macos_arm64.s  hello_name_arm64_macos.s  hello_name_x64_macos.s  hello_x64_macos.s
examples/: CMakeLists.txt  README.md  cross_platform_demo.cpp  ir_arithmetic_demo.cpp  ir_control_flow_demo.cpp  ir_hello_world.cpp  performance_benchmarks.cpp  user_input_demo.cpp  x64_assembler_demo.cpp
src/assemblers/: arm64-codegen.cpp  arm64-codegen.h  x64-codegen.cpp  x64-codegen.h
src/backends/codegen/: arm64_backend.cpp  arm64_backend.h  arm64_register_set.cpp  arm64_register_set.h  backend.cpp  backend.h  constant_folding_pass.cpp  dead_code_elimination_pass.cpp  instruction_scheduling_pass.cpp  optimization_pass_manager.cpp  optimization_passes.h  peephole_optimization_pass.cpp  register_allocator.cpp  register_allocator.h  x64_backend.cpp  x64_backend.h  x64_register_set.cpp  x64_register_set.h
src/core/ir/: ir.cpp  ir.h
src/core/tools/: abi_linker_demo.cpp  dynamic_linker.cpp  dynamic_linker.h  elf_builder.cpp  elf_builder.h  elf_object_parser.cpp  elf_object_parser.h  emit_exe.cpp  hello_macho.cpp  hello_module.cpp  lto_optimizer.cpp  lto_optimizer.h  macho_builder.cpp  macho_builder.h  macho_write_exe.cpp  module_emitter.cpp  module_emitter.h  module_linker.cpp  module_linker.h  parallel_compiler.cpp  parallel_compiler.h  relocation_engine.cpp  relocation_engine.h  section_merger.cpp  section_merger.h  shared_library.cpp  shared_library.h  simple_abi_demo.cpp  standalone_linker.cpp  standalone_linker.h  syscall_constants.h  systemv_abi.cpp  systemv_abi.h
tests/: m_testv2.h  standalone_optimization_test.cpp  test_relocation.cpp  test_suite.cpp
